src/eval/snapshots/monkey_language_server__eval__test__if_complex_ternary.snap
---
source: src/eval/test.rs
description: "\nlet a = 12;\nlet x = if (a == 12) {\n    let b = 42;\n    a * b\n} else {\n    100\n};\n"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("a", Int, (1,4)->(1,5), (1,0)->(1,11)),
        Value("x", Unknown, (2,4)->(2,5), (2,0)->(7,2)),
    ],
    refs: [
        Pos("a", "(1,4)->(1,5)"),
        Pos("a", "(2,12)->(2,13)"),
        Pos("x", "(2,4)->(2,5)"),
    ],
    scope_range: "(0,0)->(7,2)",
    parent_range: None,
    children: [
        Environment {
            store: [
                Value("b", Int, (3,8)->(3,9), (3,4)->(3,15)),
            ],
            refs: [
                Pos("b", "(3,8)->(3,9)"),
                Pos("a", "(4,4)->(4,5)"),
                Pos("b", "(4,8)->(4,9)"),
            ],
            scope_range: "(2,21)->(5,0)",
            parent_range: Some(
                "(0,0)->(7,2)",
            ),
            children: [],
        },
        Environment {
            store: [],
            refs: [],
            scope_range: "(5,7)->(7,0)",
            parent_range: Some(
                "(0,0)->(7,2)",
            ),
            children: [],
        },
    ],
}

========================

[]
