src/eval/snapshots/monkey_language_server__eval__test__if_ternary.snap
---
source: src/eval/test.rs
description: "let x = if (true) { 1 } else { 2 };"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,35)",
    parent_range: None,
    children: [
        Environment {
            store: [],
            refs: [],
            scope_range: "(0,18)->(0,22)",
            parent_range: Some(
                "(0,0)->(0,35)",
            ),
            children: [],
        },
        Environment {
            store: [],
            refs: [],
            scope_range: "(0,29)->(0,33)",
            parent_range: Some(
                "(0,0)->(0,35)",
            ),
            children: [],
        },
    ],
}

========================

[]
