src/eval/snapshots/monkey_language_server__eval__test__if_unknown_idents.snap
---
source: src/eval/test.rs
description: "let x = if (a) { b } else { c };"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Unknown, (0,0)->(0,32)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,32)",
    parent_range: None,
    children: [
        Environment {
            store: [],
            refs: [],
            scope_range: "(0,15)->(0,19)",
            parent_range: Some(
                "(0,0)->(0,32)",
            ),
            children: [],
        },
        Environment {
            store: [],
            refs: [],
            scope_range: "(0,26)->(0,30)",
            parent_range: Some(
                "(0,0)->(0,32)",
            ),
            children: [],
        },
    ],
}

========================

[
    "NameError: 'a' is not defined. (0,12)->(0,13)",
    "NameError: 'b' is not defined. (0,17)->(0,18)",
    "NameError: 'c' is not defined. (0,28)->(0,29)",
]
