src/eval/snapshots/monkey_language_server__eval__test__inner_scope_references.snap
---
source: src/eval/test.rs
description: "\nlet x = if (true) {\n    let b = 42;\n} else {\n    let a = b;\n};\nlet a = b;\n"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "a",
            Value(Unknown, (6,4)->(6,5), (6,0)->(6,10)),
        ),
        (
            "x",
            Value(Unknown, (1,4)->(1,5), (1,0)->(5,2)),
        ),
    ],
    refs: [
        Pos("x", "(1,4)->(1,5)"),
        Pos("a", "(6,4)->(6,5)"),
    ],
    scope_range: "(0,0)->(6,10)",
    parent_range: None,
    children: [
        Environment {
            store: [
                (
                    "b",
                    Value(Int, (2,8)->(2,9), (2,4)->(2,15)),
                ),
            ],
            refs: [
                Pos("b", "(2,8)->(2,9)"),
            ],
            scope_range: "(1,18)->(3,0)",
            parent_range: Some(
                "(0,0)->(6,10)",
            ),
            children: [],
        },
        Environment {
            store: [
                (
                    "a",
                    Value(Unknown, (4,8)->(4,9), (4,4)->(4,14)),
                ),
            ],
            refs: [
                Pos("a", "(4,8)->(4,9)"),
            ],
            scope_range: "(3,7)->(5,0)",
            parent_range: Some(
                "(0,0)->(6,10)",
            ),
            children: [],
        },
    ],
}

========================

[
    "NameError: 'b' is not defined. (4,12)->(4,13)",
    "NameError: 'b' is not defined. (6,8)->(6,9)",
]
