src/eval/snapshots/monkey_language_server__eval__test__lone_valid_ident.snap
---
source: src/eval/test.rs
description: let a = 12; a;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "a",
            Spanned(Int, (0,4)->(0,5)),
        ),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Warning(UnusedExpression, (0,12)->(0,13)),
]
