src/eval/snapshots/monkey_language_server__eval__test__nested_scope_funct.snap
---
source: src/eval/test.rs
description: "\nlet add = fn(x,y) {\n    let a = x + y;\n    let b = 12;\n    return fn() {\n        return a * b;\n    }\n};\n\nlet mult = add(3);\n"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "add",
            Pos(Function(Some(2), Function(Some(0), Unknown)), (1,4)->(1,7)),
        ),
        (
            "mult",
            Pos(Unknown, (9,4)->(9,8)),
        ),
    ],
    refs: [
        Pos("add", "(1,4)->(1,7)"),
        Pos("add", "(9,11)->(9,14)"),
        Pos("mult", "(9,4)->(9,8)"),
    ],
    scope_range: "(0,0)->(9,18)",
    parent_range: None,
    children: [
        Environment {
            store: [
                (
                    "a",
                    Pos(Unknown, (2,8)->(2,9)),
                ),
                (
                    "b",
                    Pos(Int, (3,8)->(3,9)),
                ),
                (
                    "x",
                    Pos(Unknown, (1,13)->(1,14)),
                ),
                (
                    "y",
                    Pos(Unknown, (1,15)->(1,16)),
                ),
            ],
            refs: [
                Pos("x", "(2,12)->(2,13)"),
                Pos("y", "(2,16)->(2,17)"),
                Pos("a", "(2,8)->(2,9)"),
                Pos("b", "(3,8)->(3,9)"),
            ],
            scope_range: "(1,18)->(7,0)",
            parent_range: Some(
                "(0,0)->(9,18)",
            ),
            children: [
                Environment {
                    store: [],
                    refs: [
                        Pos("a", "(5,15)->(5,16)"),
                        Pos("b", "(5,19)->(5,20)"),
                    ],
                    scope_range: "(4,16)->(6,4)",
                    parent_range: Some(
                        "(1,18)->(7,0)",
                    ),
                    children: [],
                },
            ],
        },
    ],
}

========================

[
    "TypeError: mismatched arg and param count. Expected 2, got 1. (9,14)->(9,15)",
]
