src/eval/snapshots/monkey_language_server__eval__test__non_hashable_hash.snap
---
source: src/eval/test.rs
description: "let x = {{}: 1};"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Hash, (0,0)->(0,16)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,16)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: unhashable type: 'hash'. (0,9)->(0,11)",
]
