src/eval/snapshots/monkey_language_server__eval__test__string_lt.snap
---
source: src/eval/test.rs
description: "let x = \"foo\" < \"foo\";"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,22)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: <str> < <str> (0,14)->(0,15)",
]
