src/eval/snapshots/monkey_language_server__eval__test__valid_ident.snap
---
source: src/eval/test.rs
description: let a = 12; let b = a;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("a", Int, (0,4)->(0,5), (0,0)->(0,11)),
        Value("b", Int, (0,16)->(0,17), (0,12)->(0,22)),
    ],
    refs: [
        Pos("a", "(0,4)->(0,5)"),
        Pos("a", "(0,20)->(0,21)"),
        Pos("b", "(0,16)->(0,17)"),
    ],
    scope_range: "(0,0)->(0,22)",
    parent_range: None,
    children: [],
}

========================

[]
